# Mon-5-Majeur

./: Dockerfile  PUBLIC_LEAGUE_API_REFERENCE.md  PUBLIC_LEAGUE_IMPLEMENTATION.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  entrypoint.sh  pyproject.toml
apps/admin_panel/: admin.py  models.py  serializers.py  urls.py  views.py
apps/admin_panel/migrations/: 0001_initial.py
apps/games/: serializers.py  tasks.py  urls.py  utils.py  views.py
apps/leaderboard/: views.py
apps/matches/: admin.py  models.py  public_views.py  serializers.py  services.py  test_today_matches.py  urls.py  utils.py  views.py
apps/matches/management/: __init__.py
apps/matches/migrations/: 0001_initial.py  0002_matchlineupmodel.py  0003_delete_matchlineupmodel.py  0004_remove_matchmodel_matches_mat_league__0be0e6_idx_and_more.py  0005_publicleagueseason_publicmatchmodel_publicmatchpair_and_more.py
apps/players/: admin.py  models.py  public_views.py  serializers.py  tasks.py  urls.py  utils.py  views.py
apps/private_leagues/: admin.py  apps.py  consumers.py  models.py  routing.py  serializers.py  urls.py  views.py
apps/public_leagues/: admin.py  apps.py  consumers.py  models.py  routing.py  serializers.py  urls.py  views.py
apps/scoring/: tasks.py  urls.py  utils.py  views.py
apps/teams/: models.py  serializers.py  urls.py  views.py
apps/users/: admin.py  models.py  serializers.py  urls.py  views.py
core/: asgi.py  celery.py  custom_middleware.py  custom_permission.py  settings.py  urls.py  utils.py
staticfiles/: staticfiles.json
(+12 files in other folders)
